STOX-781: Fix Double scrollbar Preview

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -76,3 +76,7 @@ html {
 .mat-mdc-tab-body-wrapper {
   height: 100%;
 }
+.mat-mdc-tab-body-content {
+  height: 100%;
+  overflow: hidden !important;
+}
